# bowline

./: .gitignore  CONTRIBUTING.md  README.md  eslint.config.js  package.json  pnpm-lock.yaml
crates/bowline/: Cargo.toml
crates/bowline-local/: Cargo.toml
crates/bowline-local/src/: linux_service.rs
crates/bowline-local/src/agents/: context.rs
crates/bowline-local/src/bootstrap/: ssh.rs
crates/bowline-local/src/bootstrap/ssh/: tests.rs
crates/bowline-local/src/env/: import.rs  materialize.rs  parser.rs
crates/bowline-local/src/explain/: mod.rs
crates/bowline-local/src/init/: mod.rs
crates/bowline-local/src/metadata/store/: workspace_ops.rs
crates/bowline-local/src/notifications/: mod.rs
crates/bowline-local/src/status/: compose.rs  mod.rs  scope.rs  sync.rs  tests.rs
crates/bowline-local/src/status/tests/: compose.rs
crates/bowline-local/src/sync/: conflicts.rs  download.rs  merge.rs  upload.rs
crates/bowline-local/src/sync/runner/: helpers.rs  persistence.rs
crates/bowline-local/src/trust/: mod.rs
crates/bowline-local/src/work_views/: cleanup.rs  lifecycle.rs  mod.rs
crates/bowline/src/: agent.rs  bootstrap.rs  cli.rs  daemon.rs  device_commands.rs  devices.rs  dispatch.rs  errors.rs  idempotency.rs  io_helpers.rs  lib.rs  lib_daemon_tests.rs  lib_parse_tests.rs  login_init.rs  registry.rs  render.rs  resolve.rs  runtime.rs  service.rs  status_commands.rs  update.rs  work.rs  work_agent_commands.rs
crates/bowline/src/bootstrap/: after_install.rs  output.rs  tests.rs
crates/bowline/src/cli/: parser.rs  tail.rs  work_agent.rs  workspace.rs
crates/bowline/src/registry/: specs.rs
crates/bowline/src/resolve/: actions.rs
crates/bowline/src/surface/: actions.rs  human.rs  mod.rs  style.rs
crates/bowline/tests/cli_contract/: agent_daemon.rs  discovery_workspace.rs  status_events.rs
docs/: repo-layout.md
(+26 files in other folders)
