[package]
name = "bowline-local"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
age = "0.11.3"
base64 = "0.22"
bip39 = { version = "2.2.2", features = ["rand"] }
blake3 = "1.8"
bowline-control-plane = { path = "../bowline-control-plane" }
bowline-core = { path = "../bowline-core" }
bowline-index = { path = "../bowline-index" }
bowline-storage = { path = "../bowline-storage" }
getrandom = "0.3"
keyring = "4.1.2"
p256 = { version = "0.13.2", features = ["ecdsa"] }
reqwest = { version = "0.13.4", default-features = false, features = ["blocking", "form", "json", "rustls"] }
roxmltree = "0.21.1"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.28"
sha2 = "0.10"
time = { version = "0.3", features = ["parsing"] }
toml = "1.1.2"

[target.'cfg(target_os = "linux")'.dependencies]
notify-rust = "4.18.0"

[lib]
path = "src/lib.rs"
