[package]
name = "bowline"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "bowline"

[dependencies]
blake3 = "1.8"
crossterm = "0.29"
bowline-control-plane = { path = "../bowline-control-plane", features = ["hosted-convex"] }
bowline-core = { path = "../bowline-core" }
bowline-local = { path = "../bowline-local" }
bowline-storage = { path = "../bowline-storage" }
ratatui = "0.29"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
semver = "1.0"
time = { version = "0.3", features = ["formatting", "parsing"] }

[[bin]]
name = "bowline"
path = "src/bin/bowline.rs"

[[bin]]
name = "bl"
path = "src/bin/bl.rs"
